QLocale: add const version of formattedDataSize

QLocale::formattedDataSize() was not marked const when it was added
although the function is const.
Add a const overload and mark the non-const version as deprecated and
remove it with Qt6

Fixes: QTBUG-71445
Change-Id: I56d051d9928b5e00cdaca7a874c543fed27a888d
Reviewed-by: Luca Beldi <v.ronin@yahoo.it>
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>